--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,9 +72,9 @@
         android:layout_height="match_parent"
 
         android:background="@color/dark_aqua"
-        android:paddingBottom="4dp"
+        android:paddingTop="10dp"
         android:paddingRight="30dp"
-        android:paddingTop="10dp" >
+        android:paddingBottom="4dp">
 
     </ListView>
 
